--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8" data-next-head="">
 	<meta name="viewport" content="width=device-width" data-next-head="">
@@ -10,10 +11,10 @@
 		content="pedagogy, writing school, philippines, manila, poetry, social project, socio-poetic framework, postcolonial, global south">
 	<link rel="preload" href="_next/static/css/2822bf068eb0bbc2.css" as="style">
 	<link rel="stylesheet" href="_next/static/css/2822bf068eb0bbc2.css" data-n-g=""><noscript data-n-css=""></noscript>
-	 
-	<!-- Google tag (gtag.js) --> 
-	 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z196311WLK"></script>
-	 <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-Z196311WLK'); </script>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z196311WLK"></script>
+	<script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-Z196311WLK'); </script>
 </head>
 
 <body>
@@ -57,173 +58,173 @@
 						padding-right: 36px;
 					}
 				</style>
-	<div class="chakra-stack navbar css-1caxhzn">
-			<style data-emotion="css iq2z85">
-				.css-iq2z85 {
-					display: -webkit-box;
-					display: -webkit-flex;
-					display: -ms-flexbox;
-					display: flex;
-					-webkit-align-items: center;
-					-webkit-box-align: center;
-					-ms-flex-align: center;
-					align-items: center;
-					-webkit-flex-direction: column;
-					-ms-flex-direction: column;
-					flex-direction: column;
-					gap: 0.5rem;
-					margin-bottom: 0px;
-				}
-			</style>
-			<div class="chakra-stack css-iq2z85"><a id="logo" href="index.html">
-					<style data-emotion="css 1koujw0">
-						.css-1koujw0 {
-							font-family: EB Garamond;
-							font-size: 24px;
-							font-weight: bolder;
-							font-style: italic;
+				<div class="chakra-stack navbar css-1caxhzn">
+					<style data-emotion="css iq2z85">
+						.css-iq2z85 {
+							display: -webkit-box;
+							display: -webkit-flex;
+							display: -ms-flexbox;
+							display: flex;
+							-webkit-align-items: center;
+							-webkit-box-align: center;
+							-ms-flex-align: center;
+							align-items: center;
+							-webkit-flex-direction: column;
+							-ms-flex-direction: column;
+							flex-direction: column;
+							gap: 0.5rem;
+							margin-bottom: 0px;
+						}
+					</style>
+					<div class="chakra-stack css-iq2z85"><a id="logo" href="index.html">
+							<style data-emotion="css 1koujw0">
+								.css-1koujw0 {
+									font-family: EB Garamond;
+									font-size: 24px;
+									font-weight: bolder;
+									font-style: italic;
+									padding: 0;
+									margin: 0;
+								}
+							</style>
+							<p class="css-1koujw0">[ ] </p>
+						</a></div>
+					<style>
+						.dropdown {
+							position: relative;
+							display: inline-block;
+							display: flex;
+						}
+
+						.dropdown-content {
+							min-width: max-content;
+							top: 0px;
+							left: 0px;
+							transform: translate3d(var(--x), var(--y), 0);
+							z-index: var(--z-index);
+							--transform-origin: top left;
+							--z-index: auto;
+							background-color: #f9f9f9;
+							box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+							display: none;
+							isolation: isolate;
+							position: absolute;
+							top: 32px;
+							transform: translate3d(var(--x), var(--y), 0);
+							z-index: 1;
+							right: 0;
+							padding: 6px 4px;
+						}
+
+						/* 
+				.dropdown:hover .dropdown-content {
+					display: block;
+				} */
+						.show {
+							display: block;
+						}
+					</style>
+					<style data-emotion="css 1q7nnf6">
+						.css-1q7nnf6 {
+							display: -webkit-box;
+							display: -webkit-flex;
+							display: -ms-flexbox;
+							display: flex;
+							-webkit-align-items: center;
+							-webkit-box-align: center;
+							-ms-flex-align: center;
+							align-items: center;
+							-webkit-box-pack: end;
+							-ms-flex-pack: end;
+							-webkit-justify-content: flex-end;
+							justify-content: flex-end !important;
+							-webkit-flex-direction: row;
+							-ms-flex-direction: row;
+							flex-direction: row;
+							gap: 32px;
+							-webkit-align-content: center;
+							-ms-flex-line-pack: center;
+							align-content: center;
+							padding-top: 0;
+							height: 100%;
 							padding: 0;
 							margin: 0;
 						}
 					</style>
-					<p class="css-1koujw0">[ ] </p>
-				</a></div>
-			<style>
-				.dropdown {
-					position: relative;
-					display: inline-block;
-					display: flex;
-				}
-
-				.dropdown-content {
-					min-width: max-content;
-					top: 0px;
-					left: 0px;
-					transform: translate3d(var(--x), var(--y), 0);
-					z-index: var(--z-index);
-					--transform-origin: top left;
-					--z-index: auto;
-					background-color: #f9f9f9;
-					box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-					display: none;
-					isolation: isolate;
-					position: absolute;
-					top: 32px;
-					transform: translate3d(var(--x), var(--y), 0);
-					z-index: 1;
-					right: 0;
-					padding: 6px 4px;
-				}
-
-				/* 
-				.dropdown:hover .dropdown-content {
-					display: block;
-				} */
-				.show {
-					display: block;
-				}
-			</style>
-			<style data-emotion="css 1q7nnf6">
-				.css-1q7nnf6 {
-					display: -webkit-box;
-					display: -webkit-flex;
-					display: -ms-flexbox;
-					display: flex;
-					-webkit-align-items: center;
-					-webkit-box-align: center;
-					-ms-flex-align: center;
-					align-items: center;
-					-webkit-box-pack: end;
-					-ms-flex-pack: end;
-					-webkit-justify-content: flex-end;
-					justify-content: flex-end !important;
-					-webkit-flex-direction: row;
-					-ms-flex-direction: row;
-					flex-direction: row;
-					gap: 32px;
-					-webkit-align-content: center;
-					-ms-flex-line-pack: center;
-					align-content: center;
-					padding-top: 0;
-					height: 100%;
-					padding: 0;
-					margin: 0;
-				}
-			</style>
-			<div class="chakra-stack css-1q7nnf6">
-				<style data-emotion="css 16430zi">
-					.css-16430zi {
-						display: -webkit-box;
-						display: -webkit-flex;
-						display: -ms-flexbox;
-						display: flex;
-						-webkit-align-items: center;
-						-webkit-box-align: center;
-						-ms-flex-align: center;
-						align-items: center;
-						-webkit-flex-direction: row;
-						-ms-flex-direction: row;
-						flex-direction: row;
-						gap: 0.5rem;
-						cursor: pointer;
-					}
-				</style>
-				<div class="dropdown dropdown-button chakra-stack css-16430zi" data-scope="menu" data-part="trigger"
-					type="button" dir="ltr" id="menu::R1adm::trigger" data-uid=":R1adm:" aria-haspopup="menu" data-state="closed"
-					onclick="clickHandler()">
-					<span>lectures</span><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
-						height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-						<path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path>
-					</svg>
-
-					<div class="dropdown-content" id="myDropdown">
-						<style>
-							.menu-item {
-								width: 100%;
-								display: block;
-								color: inherit;
-							}
-
-							.menu-item:hover {
-								color: rgb(193, 106, 34);
+					<div class="chakra-stack css-1q7nnf6">
+						<style data-emotion="css 16430zi">
+							.css-16430zi {
+								display: -webkit-box;
+								display: -webkit-flex;
+								display: -ms-flexbox;
+								display: flex;
+								-webkit-align-items: center;
+								-webkit-box-align: center;
+								-ms-flex-align: center;
+								align-items: center;
+								-webkit-flex-direction: row;
+								-ms-flex-direction: row;
+								flex-direction: row;
+								gap: 0.5rem;
+								cursor: pointer;
 							}
 						</style>
-						<script>
-							function clickHandler() {
-								document.getElementById("myDropdown").classList.toggle("show");
+						<div class="dropdown dropdown-button chakra-stack css-16430zi" data-scope="menu" data-part="trigger"
+							type="button" dir="ltr" id="menu::R1adm::trigger" data-uid=":R1adm:" aria-haspopup="menu"
+							data-state="closed" onclick="clickHandler()">
+							<span>lectures</span><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+								height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path>
+							</svg>
+
+							<div class="dropdown-content" id="myDropdown">
+								<style>
+									.menu-item {
+										width: 100%;
+										display: block;
+										color: inherit;
+									}
+
+									.menu-item:hover {
+										color: rgb(193, 106, 34);
+									}
+								</style>
+								<script>
+									function clickHandler() {
+										document.getElementById("myDropdown").classList.toggle("show");
+									}
+								</script>
+								<a href="sociology-aslant.html" class="menu-item">
+									<div data-scope="menu" data-part="item" role="menuitem" data-ownedby="menu::R1adm::content"
+										data-value="sociology-aslant" class="css-0">sociology aslant</div>
+								</a>
+								<a href="development-aslant.html" class="menu-item">
+									<div data-scope="menu" data-part="item" role="menuitem" data-ownedby="menu::R1adm::content"
+										data-value="development-aslant" class="css-0">development aslant
+									</div>
+								</a>
+								<a href="ecocriticism-aslant.html" class="menu-item">
+									<div data-scope="menu" data-part="item" role="menuitem" data-ownedby="menu::R1adm::content"
+										data-value="ecocriticism-aslant" class="css-0">ecocriticism aslant
+									</div>
+								</a>
+							</div>
+						</div>
+						<style data-emotion="css age11q">
+							.css-age11q {
+								background: var(--white);
+								padding: 6px;
+								width: auto;
+								margin-top: -6px;
+								font: "Roboto Mono", monospace, sans-serif;
 							}
-						</script>
-						<a href="sociology-aslant.html" class="menu-item">
-							<div data-scope="menu" data-part="item" role="menuitem" data-ownedby="menu::R1adm::content"
-								data-value="sociology-aslant" class="css-0">sociology aslant</div>
-						</a>
-						<a href="development-aslant.html" class="menu-item">
-							<div data-scope="menu" data-part="item" role="menuitem" data-ownedby="menu::R1adm::content"
-								data-value="development-aslant" class="css-0">development aslant
-							</div>
-						</a>
-						<a href="ecocriticism-aslant.html" class="menu-item">
-							<div data-scope="menu" data-part="item" role="menuitem" data-ownedby="menu::R1adm::content"
-								data-value="ecocriticism-aslant" class="css-0">ecocriticism aslant
-							</div>
+						</style>
+						<a href="about.html" class="chakra-stack css-16430zi">
+							<div data-scope="menu" data-part="item" id=":R1adm:/about" role="menuitem"
+								data-ownedby="menu::R1adm::content" data-value="about" class="css-0">about</div>
 						</a>
 					</div>
 				</div>
-				<style data-emotion="css age11q">
-					.css-age11q {
-						background: var(--white);
-						padding: 6px;
-						width: auto;
-						margin-top: -6px;
-						font: "Roboto Mono", monospace, sans-serif;
-					}
-				</style>
-				<a href="about.html" class="chakra-stack css-16430zi">
-					<div data-scope="menu" data-part="item" id=":R1adm:/about" role="menuitem" data-ownedby="menu::R1adm::content"
-						data-value="about" class="css-0">about</div>
-				</a>
-			</div>
-		</div>
 				<style data-emotion="css 19j656v">
 					.css-19j656v {
 						display: -webkit-box;
@@ -245,6 +246,7 @@
 						justify-items: center;
 						text-align: center;
 					}
+
 					.css-19j656v * {
 						margin: auto;
 					}
@@ -254,8 +256,7 @@
 						<div class="notion-viewport"></div>
 						<div class="notion-frame">
 							<div class="notion-page-scroller">
-								<main
-									class="notion-page notion-page-no-cover notion-page-no-icon notion-page-has-text-icon">
+								<main class="notion-page notion-page-no-cover notion-page-no-icon notion-page-has-text-icon">
 									<h1 class="notion-title">About slant school</h1>
 									<div class="notion-page-content">
 										<article class="notion-page-content-inner">
